@@ -3,6 +3,8 @@ AZUREUS CHANGELOG
 
 2007.0x.xx | Azureus 3.0.1.5
 
+FEATURE: Plug | Added helper class to make listening to download events across all downloads easier [amc1]
+
 
 2007.05.24 | Azureus 3.0.1.4
 
